<resources>
    <string name="app_name">Shape The World</string>
    <string name="rtbn">Real Time Bluetooth Network </string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="button_connect">Connect</string>
    <string name="btnTime">Time</string>
    <string name="btnSound">Sound</string>
    <string name="btnTemperature">Temp</string>
    <string name="btnLight">Light</string>
    <string name="tv_device_address">Device_Address</string>
    <string name="tv_connected">Connected</string>
    <string name="tv_device_name">Device_Name</string>
    <string name="tv_rssi">rssi</string>
    <string name="tv_time">Time</string>
    <string name="tv_sound">Sound</string>
    <string name="tv_step">Number of Steps</string>
    <string name="tv_temp">Temperature</string>
    <string name="tv_light">Light</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>\
</resources>
