<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="126dp"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_connected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graph"
            app:layout_constraintVertical_bias="1.0" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="380dp"
            android:layout_height="84dp"
            android:contentDescription="@string/rtbn"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/rtbn" />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btnTime"
            app:layout_constraintEnd_toStartOf="@+id/btnSound"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnSound"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSound"
            app:layout_constraintEnd_toStartOf="@+id/btnTemperature"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnTime"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnTemperature"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/btnTemperature"
            app:layout_constraintEnd_toStartOf="@+id/btnLight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSound"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnLight"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btnLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="88dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:text="@string/tv_time"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTime" />

        <TextView
            android:id="@+id/tvSound"
            android:layout_width="88dp"
            android:layout_height="43dp"
            android:text="@string/tv_sound"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvTemperature"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/tvTime"
            app:layout_constraintTop_toBottomOf="@+id/btnSound" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="88dp"
            android:layout_height="43dp"
            android:text="@string/tv_temp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvLight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSound"
            app:layout_constraintTop_toBottomOf="@+id/btnTemperature" />

        <TextView
            android:id="@+id/tvLight"
            android:layout_width="88dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_light"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvTemperature"
            app:layout_constraintTop_toBottomOf="@+id/btnLight" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSound" />

        <TextView
            android:id="@+id/tv_connected"
            android:layout_width="119dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/tv_connected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_address" />

        <TextView
            android:id="@+id/tv_steps"
            android:layout_width="186dp"
            android:layout_height="31dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_step"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.574"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graph" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>