<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listitem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtrssi"
        android:layout_width="22dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tv_rssi"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDevice_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_device_name"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDevice_Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Device_Address"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="21dp"
        android:layout_height="66dp"
        android:layout_weight="1"
        android:text="@string/button_connect" />


</LinearLayout>